font sizes and properties are set to stop some icons overlap and the smaller resolution is allowed to view the header in the menu to display the logout button

--- a/src/assets/styles/commoners.scss
+++ b/src/assets/styles/commoners.scss
@@ -94,12 +94,14 @@
 
 .logo{
 	//background: white;
-	max-width: 250px;
+	max-width: 100%;
 	@include border-radius(5px);
-	padding: 10px;
-	margin-right: 10px;
+	margin: 10% 0;
+	@media screen and (min-width: 64em){
+		margin: 2% 0%;
+	}
 	float: left;
-	max-height: 80px;
+	max-height: 100%;
 }
 
 .no-margin{
